--- a/index.html
+++ b/index.html
@@ -599,8 +599,15 @@
 </div>
 </center>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCC064BNGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-VCC064BNGT');
+</script>
 
     <script>
         // Funciones de scroll horizontal
