--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <!-- Contenedor de las tarjetas -->
         <div class="news-container">
             <div class="card">
-               <center> <div class="image">  <a href="#"> <img src="clic.png" alt=""></div> </a></center>
+               <center> <div class="image">  <a href="https://youtube.com/shorts/aSblcbbXdlg?si=xCLYrI1yHiFyk6vN"> <img src="clic.png" alt=""></div> </a></center>
                 <div class="content">
                         <span class="title">
                             La Importancia de los Chequeos Médicos Preventivos
