--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
 
             <div class="card">
-              <center> <div class="image">  <a href="#"> <img src="clic.png" alt=""></div> </a></center>              <div class="content">
+              <center> <div class="image">  <a href="https://youtu.be/tYEa-di2lAk?si=Zg2PDERJ2TXuwjle"> <img src="clic.png" alt=""></div> </a></center>              <div class="content">
                   <a href="#">
                       <span class="title">
                         Cómo Mejorar la Salud Mental en el Día a Día
@@ -425,7 +425,7 @@
                   </p>
               </div>
           </div>
-
+<!--
           <div class="card">
             <center> <div class="image">  <a href="#"> <img src="clic.png" alt=""></div> </a></center>            <div class="content">
                 <a href="#">
@@ -473,7 +473,7 @@
             Una higiene personal adecuada previene infecciones y enfermedades. Lavarse las manos con frecuencia, especialmente antes de comer y después de ir al baño, es esencial para evitar la propagación de gérmenes. En Consultorio Médico Adulam, también promovemos una correcta higiene bucal y el cuidado regular de la piel para mantener la salud integral.          </p>
       </div>
   </div>
-
+-->
             
 
             
