--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <a href="#articles" class="text-gray-700 hover:text-blue-600 transition duration-300">Artículos</a>
                 <a href="#contact" class="text-gray-700 hover:text-blue-600 transition duration-300">Contacto</a>
             </div>
-            <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300 hidden md:block">
+            <a href="https://wa.link/fuhdup"><button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300 hidden md:block">
                 Agendar Cita
-            </button>
+            </button></a>
             <button id="menuToggle" class="md:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
@@ -52,7 +52,7 @@
             <a href="#services" class="block px-4 py-2 text-gray-700 hover:bg-blue-100">Servicios</a>
             <a href="#articles" class="block px-4 py-2 text-gray-700 hover:bg-blue-100">Artículos</a>
             <a href="#contact" class="block px-4 py-2 text-gray-700 hover:bg-blue-100">Contacto</a>
-            <a href="#" class="block px-4 py-2 text-blue-600 font-semibold">Agendar Cita</a>
+            <a href="https://wa.link/fuhdup" class="block px-4 py-2 text-blue-600 font-semibold">Agendar Cita</a>
         </div>
     </nav>
 
@@ -104,9 +104,9 @@
                         Descargar App
                         <p>Proximamente</p>
                     </button>
-                    <button class="border-2 border-white px-6 py-3 rounded-full text-lg hover:bg-blue-700 transition duration-300">
+                   <a href="https://wa.link/fuhdup"> <button class="border-2 border-white px-6 py-3 rounded-full text-lg hover:bg-blue-700 transition duration-300">
                         Enviar Mensaje
-                    </button>
+                    </button></a>
                 </div>
             </div>
         </section>
@@ -151,7 +151,7 @@
             { icon: '🩺', title: 'Consulta médica general', description: 'Atención personalizada para el diagnóstico y tratamiento de afecciones comunes.' },
             { icon: '👶', title: 'Control de niño sano', description: 'Supervisamos el crecimiento y desarrollo de tu hijo.' },
             { icon: '🫀', title: 'Control y prevención de enfermedades crónicas', description: 'Monitoreamos y tratamos enfermedades como hipertensión y diabetes.' },
-            { icon: '🩸', title: 'Hipertensión arterial', description: 'Te ayudamos a controlar la presión arterial alta.' },
+            { icon: '🩸', title: 'Hipertensión arterial', description: 'Te ayudamos a controlar la presión arterial.' },
             { icon: '🍬', title: 'Diabetes mellitus', description: 'Ofrecemos un seguimiento personalizado para el control de tu nivel de azúcar en sangre.' },
             { icon: '🦋', title: 'Hipo e hipertiroidismo', description: 'Evaluamos y tratamos los desequilibrios hormonales relacionados con la tiroides.' },
             { icon: '🤰', title: 'Control de embarazo', description: 'Cuidamos de ti y de tu bebé con chequeos regulares.' },
@@ -162,6 +162,7 @@
             { icon: '🧵', title: 'Sutura de heridas', description: 'Realizamos suturas de alta calidad para cerrar y sanar heridas de forma óptima.' },
             { icon: '🔬', title: 'Papanicolaou', description: 'Realizamos este examen preventivo para la detección temprana de cáncer de cuello uterino.' },
             { icon: '🏥', title: 'Planificación de Cirugía y cesárea', description: 'Te acompañamos en la planificación de intervenciones quirúrgicas.' },
+            { icon: '🏥', title: 'Manejo del dolor', description: 'Manejo del dolor con el procedimiento de infiltración articular y columna vertebral' },
         ];
 
         // Populate articles
